--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
      <br> <br> <br>
 
 
-<h1 style="color:green;"> Fill the form below to join our DELSU community, and get access to more questions and study materials.</h1>
+<h3 style="color:green; padding:50px;"> Fill the form below to join our DELSU community, and get access to more questions and study materials.</h3>
     
        <iframe src="https://whatsform.com/HpEqt4"  width="100%" height="600" frameBorder="0"></iframe>
         
