--- a/eczooquiz02.html
+++ b/eczooquiz02.html
@@ -111,7 +111,7 @@
     
     
 
-<script src="questions.js"></script>
+<script src="zooquestions02.js"></script>
 <script src="default.js"></script>
 
 
