--- a/eczooquiz02.html
+++ b/eczooquiz02.html
@@ -45,7 +45,8 @@
     
     
     <div class="app">
-        <h1 class="heading">ZOO111 - Nematoda and Annelida </h1>
+        <h1 class="heading">ZOO111 - Nematoda and Annelida 
+        <br> <br><a href="https://t.me/delsunotes" style="font-size:15px; text-decoration:none;"><span style="text-decoration: underline;">Click here</span> to join Telegram group 🧠</a></h1>
         <div class="quiz">
             <h2 id="question" class="sub-heading_question">Question goes here</h2>
           <div class="choices answer-buttons" id="answer-buttons">
