--- a/ecbioquiz.html
+++ b/ecbioquiz.html
@@ -113,8 +113,8 @@
     
     
 
-<script src="questions.js"></script>
-<script src="main.js"></script>
+<script src="bioquestions.js"></script>
+<script src="default.js"></script>
 
 
 
