--- a/ecbioquiz.html
+++ b/ecbioquiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zoology</title>
+    <title>Biology</title>
     <link rel="stylesheet" href="style.css">
     
 </head>
